--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -1,3 +1,11 @@
 .flexRowContent {
     background-color: #212121; 
 }
+
+.flexCol {
+    max-width: 120% !important;
+    margin-top: 5%;
+    margin-left: -130%;
+}
+
+
