--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -1,13 +1,10 @@
-.menuContainer {
-    background-color: #212121;
-}
 
-.styledLinkContent {
-    color: white;
-    
-}
 
-.menuContainer {
-    justify-content: center;
-}
+
+
+.menuContainer {background-color: #212121;}
+
+.styledLinkContent {color: white;}
+
+.menuContainer {justify-content: center;}
 
