--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -1,6 +1,6 @@
 
 
-.menuContainer {background-color: #212121;}
+.menuContainer {background-color: #0b0a14;}
 
 .styledLinkContent {color: white;}
 
