--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -26,6 +26,17 @@
     color: black;
 }
 
+.autoCompleteOuterContainer {
+    
+    border-color: #59FF00;
+}
+
+.serachBarContainer {
+    width: 100%;
+    
+}
+
+
 
 
 
